# QuickSort

./: CMakeLists.txt  README.md  benchmark.cpp  benchmark_parallel.cpp  main.cpp  metrics.ipynb  new_metrix.ipynb  orbit_temp.py  orbits.ipynb  out.csv  requirements.txt  test.py
core/: QuickSort.h  QuickSort.tpp  Utils.h
math/: generate_collision.py  orbit_temp.py
math_main/: generate_collision.py  orbit_temp.py  rivers.py
tests/: quick_sort_tests.cpp
